# Namaste3D

./: .gitignore  CMakeLists.txt  README.md
color_interpolation/: main.cpp
color_interpolation/demo/: color_interpolation.cpp  color_interpolation.h
color_interpolation/n3d/: matrix.hpp  mesh.cpp  n3d.h  rasterizer.cpp  rasterizer.h  utils.hpp  vector.hpp
depth_buffering/: main.cpp
depth_buffering/demo/: depth_buffering.cpp  depth_buffering.h
depth_buffering/n3d/: clipper.hpp  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h  utils.hpp  vector.hpp
lighting_and_shading/: main.cpp
lighting_and_shading/demo/: lighting_and_shading.cpp  lighting_and_shading.h
lighting_and_shading/n3d/: camera.hpp  clipper.hpp  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h
linear_texturing/: main.cpp
linear_texturing/demo/: linear_texturing.cpp  linear_texturing.h
linear_texturing/n3d/: matrix.hpp  mesh.cpp  n3d.h  rasterizer.cpp  rasterizer.h
perspective_correct_texturing/: main.cpp
perspective_correct_texturing/demo/: perspective_correct_texturing.cpp  perspective_correct_texturing.h
perspective_correct_texturing/n3d/: mesh.h  rasterizer.cpp  rasterizer.h
points_rendering/: main.cpp
points_rendering/demo/: points_renderer.cpp  points_renderer.h
points_rendering/n3d/: camera.hpp  clipper.hpp  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h
res/: crate_texture_license.txt  grass_texture_license.txt  scene.txt
scene_parsing/: main.cpp
scene_parsing/demo/: scene_parsing.cpp  scene_parsing.h
scene_parsing/n3d/: camera.hpp  matrix.hpp  mesh.cpp  mesh.h  n3d.h  plane.hpp  rasterizer.cpp  rasterizer.h  resource_loader.cpp  resource_loader.h  scene.cpp  scene.h  vector.hpp
solid_color_rendering/: main.cpp
solid_color_rendering/demo/: solid_color_renderer.cpp  solid_color_renderer.h
solid_color_rendering/n3d/: clipper.hpp  mesh.h  rasterizer.cpp  rasterizer.h
spinach/core/: spn_canvas.cpp  spn_canvas.h  spn_core.cpp  spn_image.cpp
wireframe_rendering/: main.cpp
wireframe_rendering/demo/: wireframe_renderer.cpp  wireframe_renderer.h
wireframe_rendering/n3d/: clipper.hpp  mesh.cpp  mesh.h  n3d.h  rasterizer.cpp  rasterizer.h
